feat: use composer & add processors
feat: add user authentication per default

refactor: use composer dependencies

feat: make phiki highlighter optional

fix: remove kt helper

feat: add alert box support

feat: add processors

feat: move highlighter to codeblock processor

feat: simplify processors

feat: move relative image replacement to processor

docs: update readme

fix: use parser in all pages

docs: update docs

fix: remove double wrap using phiki

docs: update docs

fix: code colors

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,16 @@
         "getkirby/composer-installer": "^1.1",
         "getkirby/cms": "^4.6"
     },
+    "suggest": {
+        "phiki/phiki": "^1.1 - Enhanced syntax highlighting"
+    },
+    "autoload": {
+        "psr-4": {
+            "Moinframe\\Paradocs\\": "src/"
+        }
+    },
     "config": {
+        "optimize-autoloader": true,
         "allow-plugins": {
             "getkirby/composer-installer": true
         }
