chore: release v1.0.0-beta.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kirby-paradocs",
-  "version": "0.0.0",
+  "version": "1.0.0-beta.0",
   "description": "Auto-generate beautiful documentation pages using markdown",
   "main": "",
   "scripts": {
